Refactor Cosmos.I18n translate mechanism + Remove LanguagePackage, LanguageResource and LanguageManager + Remove FutureFillingPackage and IOperablrPackage + Add TranslationPackage, TranslationResource and TranslationManager

--- a/tests/Cosmos.I18N.Tests.ConsoleTest/Resources/I18N/Main.en_GB.json
+++ b/tests/Cosmos.I18N.Tests.ConsoleTest/Resources/I18N/Main.en_GB.json
@@ -1,5 +1,6 @@
 ﻿{
-  "Language": "en_GB",
+  "PackageKey": "Main",
+  "Language": "en-GB",
   "Name": "Main",
   "Contents": {
     "Hello world {0}": "Hello, World {0:d}"
