--- a/tests/Cosmos.I18N.Tests.ConsoleTest/Resources/I18N/Main.en_US.json
+++ b/tests/Cosmos.I18N.Tests.ConsoleTest/Resources/I18N/Main.en_US.json
@@ -1,5 +1,6 @@
 ﻿{
-  "Language": "en_US",
+  "PackageKey": "Main",
+  "Language": "en-US",
   "Name": "Main",
   "Contents": {
     "Hello world {0}": "Hello, World {0:d}"
