--- a/tests/Cosmos.I18N.Tests.ConsoleTest/Resources/I18N/Main.zh_CN.json
+++ b/tests/Cosmos.I18N.Tests.ConsoleTest/Resources/I18N/Main.zh_CN.json
@@ -1,5 +1,6 @@
 ﻿{
-  "Language": "zh_CN",
+  "PackageKey": "Main",
+  "Language": "zh-CN",
   "Name": "Main",
   "Contents": {
     "Hello world {0}": "你好，世界 {0:d}"
